Optimize features page SEO, add content sections, remove signup form
Update meta tags with keyword-rich title and description targeting
novel writing software searches. Add JSON-LD SoftwareApplication
structured data. Add two new feature sections (distraction-free
writing, Rust/Tauri performance). Remove email signup form from
CTA for consistency with homepage. Fix copyright year to 2026.

--- a/features/index.html
+++ b/features/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Features — Kindling | Free Fiction Writing Software</title>
+  <title>Novel Writing Software Features — Kindling | Free App for Plotters & Outliners</title>
 
   <link rel="canonical" href="https://kindlingwriter.com/features/">
 
@@ -14,10 +14,11 @@
     gtag('js', new Date());
     gtag('config', 'G-VJQ72G87FE');
   </script>
-  <meta name="description" content="Scene scaffolding, context-aware references, and seamless import/export. See how Kindling bridges your outline and your draft.">
+  <meta name="description" content="Outline-to-draft writing software built for plotters. Import from Plottr, yWriter, or Obsidian. Expandable scene beats, character references, distraction-free drafting. Free, open source, desktop app.">
+  <meta name="keywords" content="novel writing software, writing app for plotters, outline to draft, fiction writing tool, free writing software, Scrivener alternative, Plottr alternative, distraction-free writing, open source writing app, desktop writing application">
 
-  <meta property="og:title" content="Features — Kindling | Free Fiction Writing Software">
-  <meta property="og:description" content="Scene scaffolding, context-aware references, and seamless import/export. See how Kindling bridges your outline and your draft.">
+  <meta property="og:title" content="Novel Writing Software Features — Kindling | Free for Plotters & Outliners">
+  <meta property="og:description" content="Outline-to-draft writing software built for plotters. Expandable scene beats, character references, distraction-free drafting. Free, open source, desktop app.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://kindlingwriter.com/features/">
   <meta property="og:image" content="https://kindlingwriter.com/og-image.png">
@@ -27,9 +28,47 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@KindlingWriter">
-  <meta name="twitter:title" content="Features — Kindling | Free Fiction Writing Software">
-  <meta name="twitter:description" content="Scene scaffolding, context-aware references, and seamless import/export. See how Kindling bridges your outline and your draft.">
+  <meta name="twitter:title" content="Novel Writing Software Features — Kindling | Free for Plotters & Outliners">
+  <meta name="twitter:description" content="Outline-to-draft writing software built for plotters. Expandable scene beats, character references, distraction-free drafting. Free, open source, desktop app.">
   <meta name="twitter:image" content="https://kindlingwriter.com/og-image.png">
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Kindling",
+    "description": "Free, open-source desktop writing software that bridges the gap between outlining and drafting. Built for fiction writers who plan before they write.",
+    "url": "https://kindlingwriter.com/",
+    "applicationCategory": "BusinessApplication",
+    "operatingSystem": "Windows, macOS, Linux",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "softwareVersion": "0.1.0",
+    "license": "https://opensource.org/licenses/MIT",
+    "downloadUrl": "https://kindlingwriter.com/download/",
+    "screenshot": "https://kindlingwriter.com/og-image.png",
+    "author": {
+      "@type": "Organization",
+      "name": "Kindling",
+      "url": "https://kindlingwriter.com"
+    },
+    "featureList": [
+      "Import outlines from Plottr, yWriter, Obsidian Longform, and Markdown",
+      "Expandable scene beats as writing prompts",
+      "Context-aware character and location references",
+      "Export to DOCX, Markdown, and Obsidian Longform",
+      "Local-first — all data stays on your computer",
+      "Distraction-free writing interface",
+      "Built with Rust and Tauri for fast performance",
+      "Session persistence — pick up where you left off",
+      "Free and open source under MIT license"
+    ]
+  }
+  </script>
 
   <!-- Fonts (async to avoid render-blocking) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -125,6 +164,19 @@
   </section>
 
   <section class="content-section">
+    <h2>Write without distractions</h2>
+    <p>A clean, focused writing interface that keeps you in the flow. Your outline structure sits quietly in the sidebar until you need it. Beats expand only when you're ready to write into them. No cluttered toolbars, no notification badges, no feature overload — just your words and the context you need.</p>
+    <img src="../assets/beat-with-prose.png" alt="Distraction-free writing view with an expanded beat and prose editor" width="1478" height="1536" loading="lazy" decoding="async" style="max-width: 100%; height: auto; border-radius: 12px; margin: 24px 0;">
+    <div class="callout">The best writing app is the one that gets out of your way.</div>
+  </section>
+
+  <section class="content-section alt">
+    <h2>Built for speed, not for bloat</h2>
+    <p>Kindling is built with Rust and Tauri — the same technology behind some of the fastest desktop apps on the market. It launches in under a second, uses a fraction of the memory of Electron-based writing tools, and keeps your projects stored as lightweight SQLite files. No sluggish startup, no spinning wheels, no waiting around to get to work.</p>
+    <div class="callout">A novel-length project. A sub-second launch. That's the Rust difference.</div>
+  </section>
+
+  <section class="content-section">
     <h2>Pick up right where you left off</h2>
     <p>Kindling remembers your cursor position, scroll state, and which scene you were working on. See a summary of the previous scene to get back into the flow. Your writing context is preserved between sessions.</p>
   </section>
@@ -132,15 +184,8 @@
   <section class="cta-section">
     <h2>Ready to spark your draft?</h2>
     <p>Free, open source, MIT licensed.</p>
-    <div class="download-buttons single" style="margin-bottom: 24px;">
+    <div class="download-buttons single">
       <a href="/download/" class="download-btn">Download Kindling — Free</a>
-    </div>
-    <div class="signup-container" style="max-width: 480px; margin: 0 auto;">
-      <h2 style="font-size: 18px;">Get launch updates & sync early access</h2>
-      <form class="signup-form" action="https://app.kit.com/forms/8996985/subscriptions" method="post" target="_blank">
-        <input type="email" name="email_address" placeholder="your@email.com" required>
-        <button type="submit">Subscribe</button>
-      </form>
     </div>
   </section>
 
@@ -175,7 +220,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2025 Kindling. Free and open source.</p>
+      <p>&copy; 2026 Kindling. Free and open source.</p>
       <p class="footer-tagline">Your words, your data, forever.</p>
     </div>
   </footer>
