Add FAQ page with structured data and site-wide footer link
- Create /faq/ page with 10 Q&As and FAQPage JSON-LD schema
- Add FAQ link to footer across all 14 site pages
- Add /faq/ to sitemap.xml
- Add FAQ to llms.txt key pages and llms-full.txt

--- a/download/index.html
+++ b/download/index.html
@@ -216,6 +216,7 @@
           <li><a href="/compare/">Compare</a></li>
           <li><a href="/open-source/">Open Source</a></li>
           <li><a href="/blog/">Blog</a></li>
+          <li><a href="/faq/">FAQ</a></li>
         </ul>
       </div>
       <div class="footer-column">
